// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainKeys > fails when object contains all keys 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainKeys([22m[32mexpected[39m[2m)[22m

Expected object to not contain all keys:
  [32mArray [
  \\"a\\",
  \\"b\\",
  \\"c\\",
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;

exports[`.toContainKeys > fails when object does not contain all keys 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainKeys([22m[32mexpected[39m[2m)[22m

Expected object to contain all keys:
  [32mArray [
  \\"a\\",
  \\"d\\",
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;
